[package]
name = "zt"
version = "0.1.1"
edition = "2021"
description = "ZeroTier zt crate namespace placeholder"
homepage = "https://www.zerotier.com"
repository = "https://github.com/zerotier/zt"
authors = ["Adam Ierymenko <adam.ierymenko@zerotier.com>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
